# bilibili-game-sdk-reverse

./: README.md  pyproject.toml  requirements.txt
src/bili_game_sdk/: api.py  typings.py
src/bili_game_sdk/config/: sdkConfig.py
src/bili_game_sdk/middlewares/: signMiddleware.py
src/bili_game_sdk/sdkRequest/: __init__.py  baseMiddleware.py  request.py  response.py  typings.py
src/bili_game_sdk/sdkRequest/downloaders/: baseDownloader.py  requestsDownloader.py
src/bili_game_sdk/utils/: deviceUtils.py  sdkUtils.py  timeUtils.py
tests/: test_login.py
